--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home3/ebrahim2/miniconda3/envs/speech3/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home3/ebrahim/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
    "source": [
     "base_dir = \"/home3/skaasyap/willett\"\n",
     "\n",
-    "load_lm = False\n",
+    "load_lm = True\n",
     "# LM decoding hyperparameters\n",
     "acoustic_scale = 0.8\n",
     "blank_penalty = np.log(2)\n",
@@ -100,9 +100,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded LM\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
+      "I0726 20:34:33.964897 2035495 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
+      "I0726 20:37:59.797219 2035495 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+     ]
+    }
+   ],
    "source": [
     "if load_lm and 'ngramDecoder' not in globals(): \n",
     "        \n",
@@ -118,15 +135,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# file path stuff for when running models on two servers (obiwan or leia)\n",
     "# model storage locations and data path within model args differ depending on \n",
     "# the server. \n",
-    "current_server = 'obi'\n",
-    "server_models_ran_on = 'obi'\n",
+    "current_server = 'leia'\n",
+    "server_models_ran_on = 'leia'\n",
     "\n",
     "if current_server == 'obi':\n",
     "    \n",
@@ -143,10 +160,10 @@
     "    base_path = '/home3/ebrahim/save_transcripts/'\n",
     "    \n",
     "    if server_models_ran_on == 'obi':\n",
-    "        model_storage_path = '/home3/ebrahim/obi_outputs/'\n",
+    "        model_storage_path = '/home3/ebrahim/obi_outputs/gru_shortened/'\n",
     "    \n",
     "    elif server_models_ran_on == 'leia':\n",
-    "        model_storage_path = '/home3/skaasyap/willett/outputs'\n",
+    "        model_storage_path = '/home3/skaasyap/willett/outputs/'\n",
     "        \n",
     "leia_to_obi_dict = {'/home3/skaasyap/willett/data_log_both':'/data/willett_data/ptDecoder_ctc_both', \n",
     "                    '/home3/skaasyap/willett/data':'/data/willett_data/ptDecoder_ctc',\n",
@@ -159,69 +176,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: transformer_short_training_seed_0\n"
+      "Running model: gru_4_4_728_units_seed_0\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_434131/1341471609.py:228: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CER DAY:  0.3691275167785235\n",
-      "CER DAY:  0.2850574712643678\n",
-      "CER DAY:  0.2380191693290735\n",
-      "CER DAY:  0.2653061224489796\n",
-      "CER DAY:  0.12825112107623318\n",
-      "CER DAY:  0.1224105461393597\n",
-      "CER DAY:  0.13528855250709557\n",
-      "CER DAY:  0.18092691622103388\n",
-      "CER DAY:  0.1752988047808765\n",
-      "CER DAY:  0.19833333333333333\n",
-      "CER DAY:  0.17760279965004375\n",
-      "CER DAY:  0.21415441176470587\n",
-      "CER DAY:  0.17472118959107807\n",
-      "CER DAY:  0.15288788221970556\n",
-      "CER DAY:  0.12934879571810884\n",
-      "CER DAY:  0.1272563176895307\n",
-      "CER DAY:  0.13227513227513227\n",
-      "CER DAY:  0.1727541954590326\n",
-      "CER DAY:  0.12638580931263857\n",
-      "CER DAY:  0.12142152023692004\n",
-      "CER DAY:  0.12261306532663317\n",
-      "CER DAY:  0.14058106841611998\n",
-      "CER DAY:  0.13901760889712697\n",
-      "CER DAY:  0.17916666666666667\n",
-      "Model performance:  0.1712269406958029\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home3/skaasyap/willett/outputs/gru_4_4_728_units_seed_0/args'",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 52\u001b[0m\n\u001b[1;32m     48\u001b[0m     output_file \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mmodel_name_str\u001b[39m}\u001b[39;00m\u001b[39m_seed_\u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     50\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mRunning model: \u001b[39m\u001b[39m{\u001b[39;00mmodel_name_str\u001b[39m}\u001b[39;00m\u001b[39m_seed_\u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 52\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(modelPath \u001b[39m+\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m/args\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m handle:\n\u001b[1;32m     53\u001b[0m     args \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(handle)\n\u001b[1;32m     55\u001b[0m \u001b[39m# modify data file path based on which server model was ran on \u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[39m# and which server is currently being used to run this notebok.\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/IPython/core/interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    304\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    305\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    306\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[0;32m--> 310\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home3/skaasyap/willett/outputs/gru_4_4_728_units_seed_0/args'"
      ]
     }
    ],
    "source": [
-    "device = \"cuda:2\"\n",
+    "device = \"cuda:1\"\n",
     "\n",
-    "models_to_run = ['transformer_short_training']\n",
+    "models_to_run = ['gru_4_4_768_units']\n",
     "\n",
     "shared_output_file = ''\n",
     "\n",
@@ -231,9 +212,9 @@
     "else:\n",
     "    write_mode = \"w\"\n",
     "    \n",
-    "seeds_list = [0]\n",
+    "seeds_list = [0,1]\n",
     "partition = \"test\" # \"test\"\n",
-    "run_lm = False\n",
+    "run_lm = True\n",
     "\n",
     "comp_on_reduced = False # if running restricted days analyses\n",
     "fill_max_day = False\n",
@@ -287,8 +268,7 @@
     "\n",
     "            data_file = args['datasetPath']\n",
     "            \n",
-    "            \n",
-    "        data_file = '/data/willett_data/ptDecoder_ctc'\n",
+    "        print(\"DATA FILE: \", data_file)\n",
     "      \n",
     "        if 'ventral_6v_only' not in args:\n",
     "            args['ventral_6v_only'] = False\n",
@@ -478,9 +458,7 @@
     "        cer = total_edit_distance / total_seq_length\n",
     "        \n",
     "        print(\"Model performance: \", cer)\n",
-    "        sys.exit()\n",
     "        \n",
-    "\n",
     "        if run_lm:\n",
     "            \n",
     "            print(\"Running n-gram LM\")\n",
@@ -576,8 +554,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TM TRANSFORMER \n",
-    "0.016 +/- 0.006 seconds\n"
+    "#  GRU SHORT NON OVERLAPPING 4 4 1024 units\n",
+    "(0.16312056737588654, 0.15007112375533427, 0.176671181832495)\n",
+    "\n",
+    "#  GRU SHORT NON OVERLAPPING 4 4 768 units\n",
+    "\n",
+    "#  GRU SHORT NON OVERLAPPING 4 4 512 units\n",
+    "CER and WER after 3-gram LM:  (0.14898485453819055, 0.13837987803968166, 0.15996022357119136) (0.20258228768867068, 0.18814850882093556, 0.21746997243144325)\n",
+    "CER and WER after 3-gram LM:  (0.15410598191261396, 0.1433691371958222, 0.16531221010578537) (0.2078559738134206, 0.19354253159267176, 0.22291510680325294)\n",
+    "CER and WER after 3-gram LM:  (0.15980823012385137, 0.14892442509510415, 0.17068014782871976) (0.21640298236042918, 0.20112935287334593, 0.23179312681415)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# GRU OVERLAPPING 1024 Units\n",
+    "(0.12759234373297498, 0.1177953831800847, 0.13754510964858174) (0.17821422076741225, 0.16463861375291677, 0.1922452709629667)\n",
+    "(0.12494097991501107, 0.11526411112142802, 0.13481354564910503) (0.17585015457355882, 0.16250681574211354, 0.1895082789745812)\n",
+    "(0.12839138488359422, 0.1185083430244113, 0.13813175907892178) (0.18221494817239497, 0.16842248424125197, 0.19599519410498778)\n",
+    "(0.1250862601242146, 0.11504058168559311, 0.13520741295347288) (0.1778505182760502, 0.16381152203794247, 0.19241147368812195)\n"
    ]
   },
   {
@@ -586,7 +579,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "0.059/0.016\n"
+    "# TM TRANSFORMER DEPTH 5\n",
+    "CER and WER after 3-gram LM:  (0.115933606944394, 0.1067014506708351, 0.1252127983640603) (0.16657574104382614, 0.15368177508624756, 0.1795666612468941)\n",
+    "CER and WER after 3-gram LM:  (0.12352449787527695, 0.11433927553171039, 0.1328864642207172) (0.1783960720130933, 0.1655529013791415, 0.19171298671996517)\n",
+    "CER and WER after 3-gram LM:  (0.11909345149457015, 0.10942212714998742, 0.12876255652512378) (0.1691216584833606, 0.15584404058844953, 0.18245120621353922)\n",
+    "CER and WER after 3-gram LM:  (0.11691424835651763, 0.10748297572304032, 0.12684070407993206) (0.16930350972904165, 0.15640483471072475, 0.1827764567863795)\n",
+    "\n",
+    "# TM TRANSFORMER DEPTH 7\n",
+    "CER and WER after 3-gram LM:  (0.11273744234191697, 0.10379952109750006, 0.12199860729002777) (0.1691216584833606, 0.15625540724491016, 0.18251230526392123)\n",
+    "CER and WER after 3-gram LM:  (0.12334289761377257, 0.11391797673479954, 0.13266513338160046) (0.17966903073286053, 0.166331520250247, 0.19331443798449613)\n",
+    "CER and WER after 3-gram LM:  (0.1137180837540406, 0.10443577552864726, 0.1234524891407505) (0.1629387161302055, 0.1501740988670145, 0.17593611199732556)\n",
+    "CER and WER after 3-gram LM:  (0.1206552137435078, 0.11126393883529243, 0.13027161823251315) (0.17421349336242953, 0.160873204413609, 0.18752321917567022)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEPTH 5:  17.0865\n",
+      "DEPTH 7:  17.145475\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"DEPTH 5: \", (16.665 + 17.839 + 16.912 + 16.930)/4)\n",
+    "print(\"DEPTH 7: \", (16.9121+ 17.966 + 16.2938 + 17.41)/4)\n"
    ]
   },
   {
@@ -631,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.18"
   },
   "orig_nbformat": 4
  },
