--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,8 +115,8 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0726 20:34:33.964897 2035495 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0726 20:37:59.797219 2035495 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+      "I0728 20:11:06.811215 2117809 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
+      "I0728 20:14:10.093220 2117809 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
     "# model storage locations and data path within model args differ depending on \n",
     "# the server. \n",
     "current_server = 'leia'\n",
-    "server_models_ran_on = 'leia'\n",
+    "server_models_ran_on = 'obi'\n",
     "\n",
     "if current_server == 'obi':\n",
     "    \n",
@@ -160,7 +160,7 @@
     "    base_path = '/home3/ebrahim/save_transcripts/'\n",
     "    \n",
     "    if server_models_ran_on == 'obi':\n",
-    "        model_storage_path = '/home3/ebrahim/obi_outputs/gru_shortened/'\n",
+    "        model_storage_path = '/home3/skaasyap/willett/obi_models/outputs/'\n",
     "    \n",
     "    elif server_models_ran_on == 'leia':\n",
     "        model_storage_path = '/home3/skaasyap/willett/outputs/'\n",
@@ -176,33 +176,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: gru_4_4_728_units_seed_0\n"
+      "Running model: neurips_gru_data_log_time_masked_lr_schedule_seed_0\n",
+      "DATA FILE:  /home3/skaasyap/willett/data_log_both\n",
+      "Loading GRU\n"
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home3/skaasyap/willett/outputs/gru_4_4_728_units_seed_0/args'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 52\u001b[0m\n\u001b[1;32m     48\u001b[0m     output_file \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mmodel_name_str\u001b[39m}\u001b[39;00m\u001b[39m_seed_\u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     50\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mRunning model: \u001b[39m\u001b[39m{\u001b[39;00mmodel_name_str\u001b[39m}\u001b[39;00m\u001b[39m_seed_\u001b[39m\u001b[39m{\u001b[39;00mseed\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 52\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(modelPath \u001b[39m+\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39m/args\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m handle:\n\u001b[1;32m     53\u001b[0m     args \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(handle)\n\u001b[1;32m     55\u001b[0m \u001b[39m# modify data file path based on which server model was ran on \u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[39m# and which server is currently being used to run this notebok.\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/speech-bci/lib/python3.9/site-packages/IPython/core/interactiveshell.py:310\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    303\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    304\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    305\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    306\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[0;32m--> 310\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home3/skaasyap/willett/outputs/gru_4_4_728_units_seed_0/args'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home3/ebrahim/miniconda3/envs/speech-bci/lib/python3.9/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3190.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
+      "/home3/ebrahim/neural_seq_decoder/src/neural_decoder/augmentations.py:170: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at ../aten/src/ATen/native/Convolution.cpp:895.)\n",
+      "  return self.conv(input, weight=self.weight, groups=self.groups, padding=\"same\")\n",
+      "/tmp/ipykernel_2117809/3127162098.py:229: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CER DAY:  0.3053691275167785\n",
+      "CER DAY:  0.21379310344827587\n",
+      "CER DAY:  0.19488817891373802\n",
+      "CER DAY:  0.27472527472527475\n",
+      "CER DAY:  0.11569506726457399\n",
+      "CER DAY:  0.12052730696798493\n",
+      "CER DAY:  0.12771996215704826\n",
+      "CER DAY:  0.17557932263814616\n",
+      "CER DAY:  0.14183266932270916\n",
+      "CER DAY:  0.18333333333333332\n",
+      "CER DAY:  0.17672790901137359\n",
+      "CER DAY:  0.20128676470588236\n",
+      "CER DAY:  0.17565055762081785\n",
+      "CER DAY:  0.13137032842582105\n",
+      "CER DAY:  0.1159678858162355\n",
+      "CER DAY:  0.11732851985559567\n",
+      "CER DAY:  0.14074074074074075\n",
+      "CER DAY:  0.17769002961500494\n",
+      "CER DAY:  0.15077605321507762\n",
+      "CER DAY:  0.12043435340572557\n",
+      "CER DAY:  0.10753768844221105\n",
+      "CER DAY:  0.15182755388940955\n",
+      "CER DAY:  0.15013901760889714\n",
+      "CER DAY:  0.178125\n",
+      "Model performance:  0.16103338698361602\n",
+      "Running n-gram LM\n",
+      "Average decoding time per sample: 0.033 seconds\n",
+      "Standard deviation: 0.044 seconds\n",
+      "CER and WER after 3-gram LM:  (0.11767696945483601, 0.10853764289293968, 0.12687042276706295) (0.17366793962538643, 0.1602196028287572, 0.18729585524432793)\n"
      ]
     }
    ],
    "source": [
-    "device = \"cuda:1\"\n",
+    "device = \"cuda:2\"\n",
     "\n",
-    "models_to_run = ['gru_4_4_768_units']\n",
+    "models_to_run = ['neurips_gru_data_log_time_masked_lr_schedule']\n",
     "\n",
     "shared_output_file = ''\n",
     "\n",
@@ -212,7 +249,7 @@
     "else:\n",
     "    write_mode = \"w\"\n",
     "    \n",
-    "seeds_list = [0,1]\n",
+    "seeds_list = [0]\n",
     "partition = \"test\" # \"test\"\n",
     "run_lm = True\n",
     "\n",
@@ -287,6 +324,8 @@
     "                args['num_masks'] = 0\n",
     "            if 'input_dropout' not in args:\n",
     "                args['input_dropout'] = 0\n",
+    "            if 'linderman_lab' not in args:\n",
+    "                args['linderman_lab'] = False\n",
     "                \n",
     "            print(\"Loading GRU\")\n",
     "            model = GRUDecoder(\n",
@@ -555,7 +594,7 @@
    "outputs": [],
    "source": [
     "#  GRU SHORT NON OVERLAPPING 4 4 1024 units\n",
-    "(0.16312056737588654, 0.15007112375533427, 0.176671181832495)\n",
+    "(0.18748863429714493, 0.1733481163205817, 0.20224525762022216)\n",
     "\n",
     "#  GRU SHORT NON OVERLAPPING 4 4 768 units\n",
     "\n",
@@ -563,6 +602,12 @@
     "CER and WER after 3-gram LM:  (0.14898485453819055, 0.13837987803968166, 0.15996022357119136) (0.20258228768867068, 0.18814850882093556, 0.21746997243144325)\n",
     "CER and WER after 3-gram LM:  (0.15410598191261396, 0.1433691371958222, 0.16531221010578537) (0.2078559738134206, 0.19354253159267176, 0.22291510680325294)\n",
     "CER and WER after 3-gram LM:  (0.15980823012385137, 0.14892442509510415, 0.17068014782871976) (0.21640298236042918, 0.20112935287334593, 0.23179312681415)\n",
+    "\n",
+    "# GRU SHORT 4 layers \n",
+    "(0.18057828696126568, 0.16678629445964432, 0.1944448216548977)\n",
+    "(0.18803418803418803, 0.1738094510763848, 0.20240924226959411\n",
+    "(0.18003273322422259, 0.16660588574119756, 0.19369812058380678)\n",
+    "(0.1867612293144208, 0.1725848132153764, 0.2012581255961117)\n",
     "\n",
     "\n",
     "\n",
@@ -626,7 +671,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "args['ventral_6v_only']"
+    "args['ventral_6v_only']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_mean_and_sem(file_name):\n",
+    "    data_dict = pd.read_pickle(f'/home3/ebrahim/paper_results_wer/{file_name}.pkl')\n",
+    "    averaged_dict = np.mean(np.array(list(data_dict.values())), axis=0)\n",
+    "    std_dict = np.std(np.array(list(data_dict.values())), axis=0)\n",
+    "    print(\"FILENAME: \", file_name)\n",
+    "    print(\"MEAN: \", averaged_dict*100)\n",
+    "    print(\"SEM: \", std_dict*100/np.sqrt(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FILENAME:  transformer_shortened_held_out_days_big_diet64corp\n",
+      "MEAN:  [26.97180221 26.37997433 27.56913303 30.45539033 29.70240366 29.08466394\n",
+      " 31.35994587 31.91169672]\n",
+      "SEM:  [0.27679234 0.295103   0.12629396 0.40539519 0.20479693 0.38262064\n",
+      " 0.75516775 1.25215305]\n",
+      "FILENAME:  transformer_shortened_held_out_days_big_baseline\n",
+      "MEAN:  [28.87208827 34.49935815 44.78699552 53.28996283 59.97710797 52.71073153\n",
+      " 62.95669824 66.47018031]\n",
+      "SEM:  [0.47007426 0.43882473 0.33980817 0.24676428 0.31259003 0.51828908\n",
+      " 0.40481692 0.57613577]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_mean_and_sem('transformer_shortened_held_out_days_big_diet64corp')\n",
+    "print_mean_and_sem('transformer_shortened_held_out_days_big_baseline')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FILENAME:  transformer_short_held_out_normal_diet64corp1e3\n",
+      "MEAN:  [21.14312268 21.23235406 21.39806907 21.93279206 22.26074896]\n",
+      "SEM:  [0.31526679 0.20612536 0.22255797 0.65391546 0.60046117]\n",
+      "FILENAME:  transformer_short_held_out_normal_baseline\n",
+      "MEAN:  [22.74163569 25.47691721 25.42703305 30.1308074  32.58206195]\n",
+      "SEM:  [0.26101016 0.27886406 0.32857602 0.33030714 0.51801989]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_mean_and_sem('transformer_short_held_out_normal_diet64corp1e3')\n",
+    "print_mean_and_sem('transformer_short_held_out_normal_baseline')"
    ]
   },
   {
