Decode to characters

--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/data/willett_data/competitionData/ /data/willett_data/ptDecoder_ctc\n"
+      "/home3/skaasyap/willett/competitionData/ /home3/skaasyap/willett/data_log_both\n"
      ]
     }
    ],
    "source": [
-    "server = 'obi'\n",
-    "logBoth = False\n",
+    "server = 'leia'\n",
+    "logBoth = True\n",
+    "output_type = 'char'\n",
     "\n",
     "if server == 'obi':\n",
     "    dataDir = '/data/willett_data/competitionData/'\n",
@@ -31,13 +32,16 @@
     "        dataSave = '/home3/skaasyap/willett/data_log_both'\n",
     "    else:\n",
     "        dataSave = '/home3/skaasyap/willett/data'\n",
+    "        \n",
+    "if output_type == 'char':\n",
+    "    dataSave = f\"{dataSave}_char\"\n",
     "\n",
     "print(dataDir, dataSave)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -46,7 +50,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
-      "[nltk_data]     /home3/ebrahim2/nltk_data...\n",
+      "[nltk_data]     /home3/ebrahim/nltk_data...\n",
       "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
       "[nltk_data]       date!\n"
      ]
@@ -57,7 +61,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "79569a03",
    "metadata": {},
    "outputs": [],
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -129,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -149,15 +153,25 @@
     "    'T', 'TH', 'UH', 'UW', 'V',\n",
     "    'W', 'Y', 'Z', 'ZH'\n",
     "]\n",
+    "\n",
     "PHONE_DEF_SIL = PHONE_DEF + ['SIL']\n",
     "\n",
     "def phoneToId(p):\n",
-    "    return PHONE_DEF_SIL.index(p)"
+    "    return PHONE_DEF_SIL.index(p)\n",
+    "\n",
+    "CHAR_VOCAB = [chr(i) for i in range(ord('a'), ord('z')+1)]\n",
+    "CHAR_VOCAB.append(\"'\")\n",
+    "CHAR_VOCAB.append(\"-\")\n",
+    "CHAR_VOCAB.append('SIL')\n",
+    "_CHAR_TO_ID = {c: i for i, c in enumerate(CHAR_VOCAB)}\n",
+    "\n",
+    "def charToId(c):\n",
+    "    return _CHAR_TO_ID[c]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -217,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -284,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "def getDataset(fileName, logBoth):\n",
+    "def getDataset(fileName, logBoth, output_type='char'):\n",
     "    \n",
     "    session_data = loadFeaturesAndNormalize(fileName, logBoth)\n",
     "        \n",
@@ -300,6 +314,7 @@
     "    seqElements = []\n",
     "    \n",
     "    for x in range(len(session_data['inputFeatures'])):\n",
+    "        \n",
     "        allDat.append(session_data['inputFeatures'][x])\n",
     "        trueSentences.append(session_data['transcriptions'][x])\n",
     "        \n",
@@ -307,47 +322,75 @@
     "        thisTranscription = re.sub(r'[^a-zA-Z\\- \\']', '', thisTranscription)\n",
     "        thisTranscription = thisTranscription.replace('--', '').lower()\n",
     "        addInterWordSymbol = True\n",
+    "        \n",
+    "        if output_type == 'phoneme':\n",
     "\n",
-    "        phonemes = []\n",
-    "        for p in g2p(thisTranscription):\n",
-    "            if addInterWordSymbol and p==' ':\n",
+    "            phonemes = []\n",
+    "            for p in g2p(thisTranscription):\n",
+    "                if addInterWordSymbol and p==' ':\n",
+    "                    phonemes.append('SIL')\n",
+    "                p = re.sub(r'[0-9]', '', p)  # Remove stress\n",
+    "                if re.match(r'[A-Z]+', p):  # Only keep phonemes\n",
+    "                    phonemes.append(p)\n",
+    "\n",
+    "            #add one SIL symbol at the end so there's one at the end of each word\n",
+    "            if addInterWordSymbol:\n",
     "                phonemes.append('SIL')\n",
-    "            p = re.sub(r'[0-9]', '', p)  # Remove stress\n",
-    "            if re.match(r'[A-Z]+', p):  # Only keep phonemes\n",
-    "                phonemes.append(p)\n",
     "\n",
-    "        #add one SIL symbol at the end so there's one at the end of each word\n",
-    "        if addInterWordSymbol:\n",
-    "            phonemes.append('SIL')\n",
+    "            seqLen = len(phonemes)\n",
+    "            maxSeqLen = 500\n",
+    "            seqClassIDs = np.zeros([maxSeqLen]).astype(np.int32)\n",
+    "            seqClassIDs[0:seqLen] = [phoneToId(p) + 1 for p in phonemes]\n",
+    "            seqElements.append(seqClassIDs)\n",
+    "            \n",
+    "        elif output_type == 'char':\n",
+    "            \n",
+    "            characters = []\n",
+    "            for c in thisTranscription:\n",
+    "                if addInterWordSymbol and c==' ':\n",
+    "                    characters.append('SIL')\n",
+    "                else:\n",
+    "                    characters.append(c)\n",
     "\n",
-    "        seqLen = len(phonemes)\n",
-    "        maxSeqLen = 500\n",
-    "        seqClassIDs = np.zeros([maxSeqLen]).astype(np.int32)\n",
-    "        seqClassIDs[0:seqLen] = [phoneToId(p) + 1 for p in phonemes]\n",
-    "        seqElements.append(seqClassIDs)\n",
+    "            if addInterWordSymbol:\n",
+    "                characters.append('SIL')\n",
+    "                \n",
+    "            seqLen = len(characters)\n",
+    "            maxSeqLen = 500\n",
+    "            seqClassIDs = np.zeros([maxSeqLen]).astype(np.int32)\n",
+    "            try:\n",
+    "                seqClassIDs[0:seqLen] = [charToId(c) + 1 for c in characters]\n",
+    "            except:\n",
+    "                print(thisTranscription)\n",
+    "            seqElements.append(seqClassIDs)\n",
+    "                \n",
+    "        else:\n",
+    "            \n",
+    "            print(\"invalid output type, must be either 'phoneme' or 'char'\")\n",
+    "            return 0 \n",
     "\n",
     "    newDataset = {}\n",
     "    newDataset['sentenceDat'] = allDat\n",
     "    newDataset['transcriptions'] = trueSentences\n",
-    "    newDataset['phonemes'] = seqElements\n",
+    "    newDataset['text'] = seqElements\n",
     "    \n",
     "    timeSeriesLens = []\n",
     "    phoneLens = []\n",
     "    for x in range(len(newDataset['sentenceDat'])):\n",
     "        timeSeriesLens.append(newDataset['sentenceDat'][x].shape[0])\n",
     "        \n",
-    "        zeroIdx = np.argwhere(newDataset['phonemes'][x]==0)\n",
+    "        zeroIdx = np.argwhere(newDataset['text'][x]==0)\n",
     "        phoneLens.append(zeroIdx[0,0])\n",
     "    \n",
     "    newDataset['timeSeriesLens'] = np.array(timeSeriesLens)\n",
-    "    newDataset['phoneLens'] = np.array(phoneLens)\n",
-    "    newDataset['phonePerTime'] = newDataset['phoneLens'].astype(np.float32) / newDataset['timeSeriesLens'].astype(np.float32)\n",
+    "    newDataset['textLens'] = np.array(phoneLens)\n",
+    "    newDataset['textPerTime'] = newDataset['textLens'].astype(np.float32) / newDataset['timeSeriesLens'].astype(np.float32)\n",
     "    return newDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "815eca0e",
    "metadata": {},
    "outputs": [],
@@ -355,7 +398,6 @@
     "trainDatasets = []\n",
     "testDatasets = []\n",
     "competitionDatasets = []\n",
-    "\n",
     "\n",
     "for dayIdx in range(len(sessionNames)):\n",
     "    trainDataset = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
@@ -366,7 +408,9 @@
     "\n",
     "    if os.path.exists(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat'):\n",
     "        dataset = getDataset(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
-    "        competitionDatasets.append(dataset)"
+    "        competitionDatasets.append(dataset)\n",
+    "        \n",
+    "    "
    ]
   },
   {
@@ -942,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
