--- a/src/neural_decoder/n_gram_lm.ipynb
+++ b/src/neural_decoder/n_gram_lm.ipynb
@@ -115,8 +115,8 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0728 20:11:06.811215 2117809 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0728 20:14:10.093220 2117809 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+      "I0808 17:07:40.312358 2272406 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
+      "I0808 17:12:32.266412 2272406 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
      ]
     }
    ],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,9 @@
     "    base_path = '/home3/ebrahim/save_transcripts/'\n",
     "    \n",
     "    if server_models_ran_on == 'obi':\n",
-    "        model_storage_path = '/home3/skaasyap/willett/obi_models/outputs/'\n",
+    "        model_storage_path = '/home3/ebrahim/obi_outputs/'\n",
+    "        #model_storage_path = '/home3/skaasyap/willett/obi_models/outputs/'\n",
+    "\n",
     "    \n",
     "    elif server_models_ran_on == 'leia':\n",
     "        model_storage_path = '/home3/skaasyap/willett/outputs/'\n",
@@ -176,27 +178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: neurips_gru_data_log_time_masked_lr_schedule_seed_0\n",
-      "DATA FILE:  /home3/skaasyap/willett/data_log_both\n",
-      "Loading GRU\n"
+      "Running model: transformer_20_05_seed_0\n",
+      "DATA FILE:  /home3/skaasyap/willett/data_log_both\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home3/ebrahim/miniconda3/envs/speech-bci/lib/python3.9/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3190.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
-      "/home3/ebrahim/neural_seq_decoder/src/neural_decoder/augmentations.py:170: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at ../aten/src/ATen/native/Convolution.cpp:895.)\n",
-      "  return self.conv(input, weight=self.weight, groups=self.groups, padding=\"same\")\n",
-      "/tmp/ipykernel_2117809/3127162098.py:229: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_2272406/4197558736.py:229: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -204,42 +201,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CER DAY:  0.3053691275167785\n",
-      "CER DAY:  0.21379310344827587\n",
-      "CER DAY:  0.19488817891373802\n",
-      "CER DAY:  0.27472527472527475\n",
-      "CER DAY:  0.11569506726457399\n",
-      "CER DAY:  0.12052730696798493\n",
-      "CER DAY:  0.12771996215704826\n",
-      "CER DAY:  0.17557932263814616\n",
-      "CER DAY:  0.14183266932270916\n",
-      "CER DAY:  0.18333333333333332\n",
-      "CER DAY:  0.17672790901137359\n",
-      "CER DAY:  0.20128676470588236\n",
-      "CER DAY:  0.17565055762081785\n",
-      "CER DAY:  0.13137032842582105\n",
-      "CER DAY:  0.1159678858162355\n",
-      "CER DAY:  0.11732851985559567\n",
-      "CER DAY:  0.14074074074074075\n",
-      "CER DAY:  0.17769002961500494\n",
-      "CER DAY:  0.15077605321507762\n",
-      "CER DAY:  0.12043435340572557\n",
-      "CER DAY:  0.10753768844221105\n",
-      "CER DAY:  0.15182755388940955\n",
-      "CER DAY:  0.15013901760889714\n",
-      "CER DAY:  0.178125\n",
-      "Model performance:  0.16103338698361602\n",
+      "CER DAY:  0.32997762863534674\n",
+      "CER DAY:  0.27241379310344827\n",
+      "CER DAY:  0.20926517571884984\n",
+      "CER DAY:  0.24803767660910517\n",
+      "CER DAY:  0.12556053811659193\n",
+      "CER DAY:  0.09792843691148775\n",
+      "CER DAY:  0.1456953642384106\n",
+      "CER DAY:  0.15953654188948307\n",
+      "CER DAY:  0.1601593625498008\n",
+      "CER DAY:  0.17916666666666667\n",
+      "CER DAY:  0.15485564304461943\n",
+      "CER DAY:  0.19301470588235295\n",
+      "CER DAY:  0.15427509293680297\n",
+      "CER DAY:  0.13250283125707815\n",
+      "CER DAY:  0.1008028545941124\n",
+      "CER DAY:  0.11913357400722022\n",
+      "CER DAY:  0.11957671957671957\n",
+      "CER DAY:  0.1539980256663376\n",
+      "CER DAY:  0.12638580931263857\n",
+      "CER DAY:  0.10661401776900296\n",
+      "CER DAY:  0.10050251256281408\n",
+      "CER DAY:  0.13120899718837864\n",
+      "CER DAY:  0.12418906394810009\n",
+      "CER DAY:  0.16041666666666668\n",
+      "Model performance:  0.15467789195658455\n",
       "Running n-gram LM\n",
-      "Average decoding time per sample: 0.033 seconds\n",
-      "Standard deviation: 0.044 seconds\n",
-      "CER and WER after 3-gram LM:  (0.11767696945483601, 0.10853764289293968, 0.12687042276706295) (0.17366793962538643, 0.1602196028287572, 0.18729585524432793)\n"
+      "Average decoding time per sample: 0.024 seconds\n",
+      "Standard deviation: 0.029 seconds\n",
+      "CER and WER after 3-gram LM:  (0.12359713797987869, 0.11429566768725243, 0.1330709865584996) (0.18239679941807602, 0.1688287409690775, 0.19641279344855983)\n"
      ]
     }
    ],
    "source": [
-    "device = \"cuda:2\"\n",
+    "device = \"cuda:3\"\n",
     "\n",
-    "models_to_run = ['neurips_gru_data_log_time_masked_lr_schedule']\n",
+    "models_to_run = ['transformer_20_05']\n",
     "\n",
     "shared_output_file = ''\n",
     "\n",
@@ -339,7 +336,7 @@
     "                strideLen=args[\"strideLen\"],\n",
     "                kernelLen=args[\"kernelLen\"],\n",
     "                gaussianSmoothWidth=args[\"gaussianSmoothWidth\"],\n",
-    "                bidirectional=args[\"bidirectional\"],\n",
+    "                bidirectional=False,\n",
     "                input_dropout=args['input_dropout'], \n",
     "                max_mask_pct=args['max_mask_pct'],\n",
     "                num_masks=args['num_masks'], \n",
@@ -589,33 +586,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  GRU SHORT NON OVERLAPPING 4 4 1024 units\n",
-    "(0.18748863429714493, 0.1733481163205817, 0.20224525762022216)\n",
+    "# time masked GRU \n",
+    "# skipped seed 2, wasn't loading\n",
+    "#(0.17366793962538643, 0.1602196028287572, 0.18729585524432793)\n",
+    "#(0.17312238588834333, 0.15958586198358304, 0.1868232979537566)\n",
+    "#(0.1718494271685761, 0.15881687135303574, 0.18545466025945911)\n",
+    "#(0.16766684851791236, 0.1551038348610167, 0.18048526647065966)\n",
     "\n",
-    "#  GRU SHORT NON OVERLAPPING 4 4 768 units\n",
-    "\n",
-    "#  GRU SHORT NON OVERLAPPING 4 4 512 units\n",
-    "CER and WER after 3-gram LM:  (0.14898485453819055, 0.13837987803968166, 0.15996022357119136) (0.20258228768867068, 0.18814850882093556, 0.21746997243144325)\n",
-    "CER and WER after 3-gram LM:  (0.15410598191261396, 0.1433691371958222, 0.16531221010578537) (0.2078559738134206, 0.19354253159267176, 0.22291510680325294)\n",
-    "CER and WER after 3-gram LM:  (0.15980823012385137, 0.14892442509510415, 0.17068014782871976) (0.21640298236042918, 0.20112935287334593, 0.23179312681415)\n",
-    "\n",
-    "# GRU SHORT 4 layers \n",
-    "(0.18057828696126568, 0.16678629445964432, 0.1944448216548977)\n",
-    "(0.18803418803418803, 0.1738094510763848, 0.20240924226959411\n",
-    "(0.18003273322422259, 0.16660588574119756, 0.19369812058380678)\n",
-    "(0.1867612293144208, 0.1725848132153764, 0.2012581255961117)\n",
+    "# time masked GRU with non-overlapping inputs \n",
+    "#(0.17548645208219676, 0.16213580219738752, 0.18912977488011257)\n",
+    "# (0.17821422076741225, 0.16459117277510982, 0.19234308853303883)\n",
+    "# (0.1794871794871795, 0.16606496929425443, 0.19314171617778958)\n",
     "\n",
     "\n",
+    "# time masked GRU with non-overlapping inputs at 768 hidden unit size\n",
+    "#(0.17530460083651572, 0.16197576392295018, 0.18881920276440825)\n",
+    "#(0.17094017094017094, 0.15776172140896882, 0.18418719407838935)\n",
+    "#(0.17094017094017094, 0.15833875695315866, 0.18457916173354635)\n",
+    "# \n",
     "\n",
-    "# GRU OVERLAPPING 1024 Units\n",
-    "(0.12759234373297498, 0.1177953831800847, 0.13754510964858174) (0.17821422076741225, 0.16463861375291677, 0.1922452709629667)\n",
-    "(0.12494097991501107, 0.11526411112142802, 0.13481354564910503) (0.17585015457355882, 0.16250681574211354, 0.1895082789745812)\n",
-    "(0.12839138488359422, 0.1185083430244113, 0.13813175907892178) (0.18221494817239497, 0.16842248424125197, 0.19599519410498778)\n",
-    "(0.1250862601242146, 0.11504058168559311, 0.13520741295347288) (0.1778505182760502, 0.16381152203794247, 0.19241147368812195)\n"
+    "# time masked GRU with non-overlapping inputs at depth 4\n",
+    "# (0.17330423713402437, 0.15988181378071797, 0.1869193378504795)\n",
+    "# (0.1783960720130933, 0.16510940795192394, 0.1921892357291522)\n",
+    "# (0.17003091471176576, 0.15721862000998324, 0.1832258358573235)\n",
+    "\n",
+    "\n",
+    "# time masked GRU shortened \n",
+    "#(0.17821422076741225, 0.16433902284860016, 0.19218020185640572)\n",
+    "#(0.17585015457355882, 0.16255790031594194, 0.1898920247261359)\n",
+    "#(0.18221494817239497, 0.16851481548809308, 0.19590933679891467)\n",
+    "#(0.1778505182760502, 0.16417112299465242, 0.19211478472111765)\n",
+    "\n",
+    "# time masked GRU shortened non-overlapping\n",
+    "#(0.18748863429714493, 0.17330904460153015, 0.20188987824822824)\n",
+    "#(0.1900345517366794, 0.17533029032906433, 0.20443807843800274)\n",
+    "#(0.19367157665030005, 0.17965306188638333, 0.2079567400699462)\n",
+    "#(0.1862156755773777, 0.17225745894354344, 0.20047645623821375)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
