--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "4316910d",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home3/skaasyap/willett/competitionData/ /home3/skaasyap/willett/data_log_both\n"
+      "/data/neural_data/competitiondata/ /data/neural_data/ptDecoder_ctc_both_char\n"
      ]
     }
    ],
    "source": [
-    "server = 'leia'\n",
+    "server = 'ec2'\n",
     "logBoth = True\n",
     "output_type = 'char'\n",
     "\n",
@@ -33,6 +33,13 @@
     "    else:\n",
     "        dataSave = '/home3/skaasyap/willett/data'\n",
     "        \n",
+    "elif server == 'ec2':\n",
+    "    dataDir = \"/data/neural_data/competitiondata/\"\n",
+    "    if logBoth:\n",
+    "        dataSave = '/data/neural_data/ptDecoder_ctc_both'\n",
+    "    else:\n",
+    "        dataSave = '/data/neural_data/ptDecoder'\n",
+    "                \n",
     "if output_type == 'char':\n",
     "    dataSave = f\"{dataSave}_char\"\n",
     "\n",
@@ -41,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "d1f89411",
    "metadata": {},
    "outputs": [
@@ -50,9 +57,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
-      "[nltk_data]     /home3/ebrahim/nltk_data...\n",
-      "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
-      "[nltk_data]       date!\n"
+      "[nltk_data]     /root/nltk_data...\n",
+      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger_eng.zip.\n"
      ]
     },
     {
@@ -61,7 +67,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "79569a03",
    "metadata": {},
    "outputs": [],
@@ -118,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -133,10 +139,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "edb2175e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /root/nltk_data...\n",
+      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n",
+      "[nltk_data] Downloading package cmudict to /root/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/cmudict.zip.\n"
+     ]
+    }
+   ],
    "source": [
     "import re \n",
     "from g2p_en import G2p\n",
@@ -171,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -231,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -298,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "def getDataset(fileName, logBoth, output_type='char'):\n",
+    "def getDataset(fileName, logBoth, output_type):\n",
     "    \n",
     "    session_data = loadFeaturesAndNormalize(fileName, logBoth)\n",
     "        \n",
@@ -390,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "id": "815eca0e",
    "metadata": {},
    "outputs": [],
@@ -400,14 +418,14 @@
     "competitionDatasets = []\n",
     "\n",
     "for dayIdx in range(len(sessionNames)):\n",
-    "    trainDataset = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
-    "    testDataset = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
+    "    trainDataset = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth, output_type='char')\n",
+    "    testDataset = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth, output_type='char')\n",
     "\n",
     "    trainDatasets.append(trainDataset)\n",
     "    testDatasets.append(testDataset)\n",
     "\n",
     "    if os.path.exists(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat'):\n",
-    "        dataset = getDataset(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
+    "        dataset = getDataset(dataDir + '/competitionHoldOut/' + sessionNames[dayIdx] + '.mat', logBoth, output_type='char')\n",
     "        competitionDatasets.append(dataset)\n",
     "        \n",
     "    "
@@ -415,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "80014502",
    "metadata": {},
    "outputs": [],
@@ -986,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
